--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <script id='sap-ui-bootstrap'
-            src='resources/sap-ui-core.js'
-            data-sap-ui-theme='sap_bluecrystal'
-            data-sap-ui-libs='sap.m'>
-    </script>
-    <title> ALS</title>
-</head>
-<body>
+<html><head>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+    <title>Hello World</title>
 
+    <script id='sap-ui-bootstrap'
+            src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js'
+            data-sap-ui-theme='sap_bluecrystal'
+            data-sap-ui-libs='sap.ui.commons'></script>
+
+  
+
+</head>
+<body class='sapUiBody'>
+<div id='content'></div>
 </body>
 </html>
