--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,10 @@
             data-sap-ui-theme='sap_bluecrystal'
             data-sap-ui-libs='sap.ui.commons, sap.m'></script>
 
+    <script src="questions/paging.js" type="application/javascript"></script>
+
+    <link type="text/css" rel="stylesheet" href="questions/question.css">
+
   
 
 </head>
