--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html><head>
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <title>Hello World</title>
+    <title>ALS Application</title>
+
+    <link type="text/css" rel="stylesheet" href="login/login.css"/>
 
     <script id='sap-ui-bootstrap'
             src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js'
             data-sap-ui-theme='sap_bluecrystal'
-            data-sap-ui-libs='sap.ui.commons'></script>
-
-  
+            data-sap-ui-libs='sap.ui.commons, sap.m'></script>
+    <script type="text/javascript" src="login/login.js"></script>
 
 </head>
 <body class='sapUiBody'>
