Header and footer fragments, login screen design

--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html><head>
+<html>
+<head>
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <title>ALS Application</title>
-
-    <link type="text/css" rel="stylesheet" href="css/login.css"/>
-    <link type="text/css" rel="stylesheet" href="css/weeklyTasks.css" />
-    <link type="text/css" rel="stylesheet" href="css/questions.css">
-
     <script id='sap-ui-bootstrap'
             src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js'
             data-sap-ui-theme='sap_bluecrystal'
             data-sap-ui-libs='sap.ui.commons, sap.m'></script>
     <script type="text/javascript" src="loader.js"></script>
+    <link type="text/css" rel="stylesheet" href="style/style.css"/>
 </head>
 
 <body class='sapUiBody'>
