--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <script id='sap-ui-bootstrap'
             src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js'
             data-sap-ui-theme='sap_bluecrystal'
+            data-sap-ui-libs='sap.ui.commons, sap.m'></script>
 
     <script src="questions/loader.questions.js" type="application/javascript"></script>
 
