--- a/ALS_client/src/main/webapp/index.html
+++ b/ALS_client/src/main/webapp/index.html
@@ -10,9 +10,9 @@
     <!-- src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js'-->
     <script type="text/javascript" src="loader.js"></script>
     <link type="text/css" rel="stylesheet" href="style/style.css"/>
-	<link type="text/css" rel="stylesheet" href="style/speech.css">
+	
 
- 	<link type="text/css" rel="stylesheet" href="style/writing.css">
+ 	<link type="text/css" rel="stylesheet" href="style/sensors.css">
 
     <script type="text/javascript" src="js/writing/RecordableDrawing.js"></script>
 	<script type="text/javascript" src="js/writing/drawingSerializer.js"></script>
