--- a/ALS_client/src/main/webapp/index.html
+++ b/ALS_client/src/main/webapp/index.html
@@ -11,7 +11,8 @@
     
     <link type="text/css" rel="stylesheet" href="style/style.css"/>
     <link type="text/css" rel="stylesheet" href="style/sensors.css">
-
+    
+	<script type="text/javascript" src="js/recordmp3/recordmp3.js"></script>
     <script type="text/javascript" src="js/writing/RecordableDrawing.js"></script>
 	<script type="text/javascript" src="js/writing/drawingSerializer.js"></script>
     <script type="text/javascript" src="loader.js"></script>
